# codex-buddy

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.es.md  README.md  README.zh-CN.md  dist-workspace.toml
.agents/skills/release/: SKILL.md
.agents/skills/release/agents/: openai.yaml
.github/workflows/: release.yml  tray-app.yml
Formula/: codex-buddy.rb
apps/tray/: Package.swift
apps/tray/Scripts/: build-app.sh  build-ffi.sh
apps/tray/Sources/CodexBuddyTray/: AccountFormatting.swift  AccountStore.swift  AppDelegate.swift  AppIconView.swift  ClearWindowBackground.swift  CodexBuddyTrayApp.swift  TerminalLauncher.swift  main.swift
apps/tray/Sources/CodexBuddyTray/DesignSystem/: AppearanceMode.swift  Theme.swift
apps/tray/Sources/CodexBuddyTray/Views/: AccountRow.swift  AddAccountView.swift  AvatarView.swift  DoctorPill.swift  DoctorSheet.swift  FooterView.swift  HeaderView.swift  HeroView.swift  RowActionBar.swift  TrayPanel.swift  UsageRingView.swift
apps/tray/Tests/CodexBuddyTrayTests/: FormattingTests.swift
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: passthrough.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  config_check.rs  doctor.rs  error.rs  init.rs  layout.rs  lib.rs  ops.rs  paths.rs  registry.rs  running.rs  testutil.rs  usage.rs
crates/core/src/auth/: tests.rs
crates/core/src/config_check/: tests.rs
crates/core/src/doctor/: tests.rs
crates/core/src/init/: tests.rs
crates/core/src/layout/: tests.rs
crates/core/src/ops/: tests.rs
crates/core/src/paths/: tests.rs
crates/core/src/registry/: tests.rs
crates/core/src/running/: tests.rs
crates/core/src/usage/: tests.rs
crates/ffi/: Cargo.toml
crates/ffi-bindgen/: Cargo.toml
crates/ffi/src/: lib.rs  tests.rs
