[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "Switch between and run multiple Codex CLI accounts in parallel, without forced re-logins."
repository = "https://github.com/<YOUR_GH_USERNAME>/codex-buddy"

[workspace.dependencies]
codex-buddy-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
pico-args = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
