[package]
name = "codex-buddy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "codex-buddy"
path = "src/main.rs"

[dependencies]
codex-buddy-core = { workspace = true }
pico-args = { workspace = true }

[dev-dependencies]
tempfile = "3"
