[package]
name = "codex-buddy-ffi-bindgen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Dev tool: generates the Swift bindings for codex-buddy-ffi (kept out of the shipped cdylib's dependency graph)"
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "uniffi-bindgen"
path = "src/main.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
